
[package]
name = "genomic_strcutures"
version = "0.1.0"
authors = ["DanielRivasMD <danielrivasmd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "genomic_strcutures"
path = "src/lib.rs"

[dependencies]
derive-new = "0.5"
data-test = "0.1.0"
